# skulpture

./: CMakeLists.txt  INSTALL  NOTES.html  PACKAGING  README  README.html  Skulpture.qss  config.h.cmake  configure  install.sh  uninstall.sh
kwin-client/: CMakeLists.txt  kwin_skulpture.cpp  kwin_skulpture.h
kwin-client/config/: CMakeLists.txt
src/: CMakeLists.txt  sk_animations.cpp  sk_arrows.cpp  sk_buttons.cpp  sk_cache.cpp  sk_color.cpp  sk_combobox.cpp  sk_complex.cpp  sk_dial.cpp  sk_dock.cpp  sk_factory.cpp  sk_frames.cpp  sk_header.cpp  sk_icons.cpp  sk_layout.cpp  sk_mdi.cpp  sk_menu.cpp  sk_misc.cpp  sk_progressbar.cpp  sk_scrollbar.cpp  sk_shadows.cpp  sk_shortcuts.cpp  sk_slider.cpp  sk_spinbox.cpp  sk_tabs.cpp  sk_text.cpp  sk_toolbar.cpp  skulpture.cpp  skulpture.h  skulpture_p.cpp  skulpture_p.h  skulpturestyle.json
src/config/: CMakeLists.txt  sk_config.cpp
